k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: suss-workshop
spec:
  selector:
    app: suss-workshop
    version: 0.1.0
  ports:
    - name: main
      port: 9090
      targetPort: main
